LPS-20487 remove default jboss as7 memory java parameters